--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.3",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
